More menu dark mode ui

--- a/app/src/main/res/layout/activity_design_system.xml
+++ b/app/src/main/res/layout/activity_design_system.xml
@@ -112,10 +112,12 @@
 
                     android:thumb="@drawable/se_switch_thumb"
                     app:switchMinWidth="44dp"
+                    app:switchPadding="3dp"
 
                     app:track="@drawable/se_switch_track" />
 
                 <androidx.appcompat.widget.SwitchCompat
+                    app:switchPadding="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
