--- a/app/src/main/res/drawable/se_switch_thumb.xml
+++ b/app/src/main/res/drawable/se_switch_thumb.xml
@@ -5,14 +5,20 @@
             <corners android:radius="24dp" />
             <size android:width="24dp" android:height="24dp" />
             <solid android:color="@color/blue500" />
+            <stroke android:width="1dp" android:color="@color/blue200"/>
         </shape>
     </item>
+<!--    android:top="1dp"-->
+<!--    android:bottom="1dp"-->
+<!--    android:left="1dp"-->
+<!--    android:right="1dp"-->
 
     <item android:state_checked="false">
         <shape android:shape="oval">
             <corners android:radius="24dp"/>
             <size android:width="24dp" android:height="24dp" />
             <solid android:color="@color/gray300" />
+            <stroke android:width="1dp" android:color="@color/white500"/>
         </shape>
     </item>
 </selector>
