--- a/app/src/main/res/layout/activity_team_manage_ban.xml
+++ b/app/src/main/res/layout/activity_team_manage_ban.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.team.manage.TeamManageBanActivity">
+    tools:context=".ui.team.manage.MemberBanActivity">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
