--- a/app/src/main/res/layout/activity_todo_manage.xml
+++ b/app/src/main/res/layout/activity_todo_manage.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.team.manage.TodoManageActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.heechan.membeder.ui.view.header.NavigationHeader
-        android:id="@+id/hd_teamBuilding"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <data>
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    </data>
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationTitle="할일 관리 권한" />
-
-    <TextView
-        android:id="@+id/txt_todomanage_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/suit_bold"
-        android:text="할일 관리 권한"
-        android:textColor="#1D1D1D"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_memberbanmanage"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/txt_todomanage_title"
-        tools:listitem="@layout/authoritymanage_item" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        tools:context=".ui.team.manage.TodoManageActivity">
+
+        <com.heechan.membeder.ui.view.header.NavigationHeader
+            android:id="@+id/hd_teamBuilding"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationTitle="할일 관리 권한" />
+
+        <TextView
+            android:id="@+id/txt_todomanage_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="할일 관리 권한"
+            android:textColor="#1D1D1D"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_memberbanmanage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/txt_todomanage_title"
+            tools:listitem="@layout/authoritymanage_item" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
