--- a/app/src/main/res/layout/activity_authority_manage.xml
+++ b/app/src/main/res/layout/activity_authority_manage.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.heechan.membeder.ui.team.manage.AuthorityManageViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,13 +24,14 @@
             app:layout_constraintStart_toStartOf="parent"
 
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationTitle="권한 설정" />
+            app:navigationTitle="관리 권한" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_authoritymanage_warning"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="24dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="24dp"
             android:background="@drawable/custom_deliberatelyselect_button"
             app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding">
@@ -53,65 +57,30 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/img_authoritymanage_warning"
                 app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
-            android:id="@+id/tv_authoritymanage_memeber"
+            android:id="@+id/txt_memberbanmanage_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="22.5dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/suit_bold"
-            android:text="멤버 관리"
-            android:textColor="#313040"
+            android:text="관리 권한"
+            android:textColor="#1D1D1D"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_authoritymanage_warning" />
 
-
-        <ImageView
-            android:id="@+id/btn_authoritymanage_member"
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_memberbanmanage"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20sp"
-
-            android:src="@drawable/ic_arrow_right"
-
-            app:layout_constraintBottom_toBottomOf="@id/tv_authoritymanage_memeber"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintTop_toTopOf="@id/tv_authoritymanage_memeber"
-
-            />
-
-        <TextView
-            android:id="@+id/tv_authoritymanage_todo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="37dp"
-            android:fontFamily="@font/suit_bold"
-            android:text="할일 관리"
-            android:textColor="#313040"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_authoritymanage_memeber" />
-
-
-        <ImageView
-            android:id="@+id/btn_authoritymanage_todo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20sp"
-
-            android:src="@drawable/ic_arrow_right"
-
-            app:layout_constraintBottom_toBottomOf="@id/tv_authoritymanage_todo"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintTop_toTopOf="@id/tv_authoritymanage_todo"
-
-            />
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_memberbanmanage_title"
+            tools:layout_editor_absoluteX="-16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/authoritymanage_item" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
