--- a/app/src/main/res/layout/authoritymanage_item.xml
+++ b/app/src/main/res/layout/authoritymanage_item.xml
@@ -1,55 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="64dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/img_item_profile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/custom_profile"/>
+    <data>
+        <variable
+            name="userData"
+            type="com.heechan.membeder.model.data.auth.User" />
 
-    <TextView
-        android:id="@+id/txt_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전직 애드캔 부장"
-        app:layout_constraintStart_toEndOf="@id/img_item_profile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="12dp"
-        android:textColor="#1D1D1D"
-        android:textSize="15sp"
-        android:fontFamily="@font/suit_bold" />
-    <TextView
-        android:id="@+id/txt_item_position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="개발자"
-        app:layout_constraintStart_toEndOf="@id/txt_item_name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="4dp"
-        android:textColor="#6456FF"
-        android:textSize="12sp"
-        android:fontFamily="@font/suit_bold" />
+        <variable
+            name="isOwner"
+            type="Boolean" />
+    </data>
 
-    <Switch
-        android:id="@+id/sw_item_OnOff"
-        android:layout_width="52dp"
-        android:layout_height="28dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:thumb="@drawable/switch_thumb"
-        android:track="@drawable/switch_track"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp">
+
+        <ImageView
+            android:id="@+id/img_item_profile"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/custom_profile" />
+
+        <TextView
+            android:id="@+id/txt_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{userData.nickname}"
+            app:layout_constraintStart_toEndOf="@id/img_item_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="12dp"
+            android:textColor="#1D1D1D"
+            android:textSize="15sp"
+            android:fontFamily="@font/suit_bold" />
+
+        <TextView
+            android:id="@+id/txt_item_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{userData.profession}"
+            app:layout_constraintStart_toEndOf="@id/txt_item_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="4dp"
+            android:textColor="#6456FF"
+            android:textSize="12sp"
+            android:fontFamily="@font/suit_bold" />
+
+        <Switch
+            android:id="@+id/sw_item_OnOff"
+            bindVisibility="@{isOwner}"
+            android:checked="@{userData.}"
+            android:layout_width="52dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:thumb="@drawable/switch_thumb"
+            android:track="@drawable/switch_track" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
