--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,6 +59,10 @@
         <item name="cornerSize">20%</item>
     </style>
 
+    <style name="cornerSizeCircle">
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="btn_fill_style" parent="Widget.AppCompat.Button">
         <item name="android:textColor">?attr/btn_fill_textColor</item>
         <item name="android:fontWeight">600</item>
