--- a/app/src/main/res/layout/authoritymanage_item.xml
+++ b/app/src/main/res/layout/authoritymanage_item.xml
@@ -55,7 +55,7 @@
         <Switch
             android:id="@+id/sw_item_OnOff"
             bindVisibility="@{isOwner}"
-            android:checked="@{userData.}"
+            android:checked="true"
             android:layout_width="52dp"
             android:layout_height="28dp"
             android:layout_marginEnd="24dp"
