--- a/app/src/main/res/layout/row_schedule_list.xml
+++ b/app/src/main/res/layout/row_schedule_list.xml
@@ -37,7 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="12.30일"
+            android:text="@{scheduleData.deadLine}"
+            tools:text="12.30"
             android:textSize="13sp"
             android:textColor="@color/blue500"
             android:textFontWeight="500"
