--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="vm"
+            type="com.heechan.membeder.ui.main.MoreViewModel" />
 
         <variable
             name="singleton"
@@ -34,139 +37,154 @@
 
             app:layout_constraintGuide_end="@dimen/app_padding_hr" />
 
-        <com.heechan.membeder.ui.view.header.TitleHeader
-            android:id="@+id/hd_more"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_more_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_marginTop="52dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="마이페이지"
+            android:textColor="#1D1D1D"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:titleMenu1Icon="@drawable/ic_bnv_home_fill"
-            app:titleTitle="타이틀" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_more_profile"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="36dp"
+            app:cardCornerRadius="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_title">
 
-        <TextView
-            android:id="@+id/txt_more_profileTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="40dp"
-            android:text="프로필"
-            android:textFontWeight="700"
-
-            android:textSize="17sp"
-
-            app:layout_constraintStart_toStartOf="@id/line_more_start"
-            app:layout_constraintTop_toBottomOf="@id/hd_more" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/img_more_profileImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-
-            android:layout_marginTop="16dp"
-            android:src="@drawable/heechan"
-
-            app:layout_constraintStart_toStartOf="@id/line_more_start"
-
-            app:layout_constraintTop_toBottomOf="@id/txt_more_profileTitle"
-            app:shapeAppearanceOverlay="@style/cornerSize10Percent" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@{singleton.userData.profileImg}" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/txt_more_profileName"
+            android:id="@+id/tv_more_teamtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginStart="8dp"
-            android:text="@{singleton.userData.name}"
-            android:textFontWeight="700"
-            android:textSize="15sp"
-
-            app:layout_constraintStart_toEndOf="@id/img_more_profileImage"
-
-            app:layout_constraintTop_toTopOf="@id/img_more_profileImage"
-            tools:text="박희찬" />
-
-        <TextView
-            android:id="@+id/txt_more_profileProfession"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@{singleton.userData.profession}"
-            android:textFontWeight="600"
+            android:layout_marginStart="59dp"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="참여한 팀"
+            android:textColor="#B7B7B7"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_more_profileImage"
-
-            app:layout_constraintStart_toStartOf="@id/txt_more_profileName"
-            app:layout_constraintTop_toBottomOf="@id/txt_more_profileName"
-            tools:text="개발좌" />
-
-        <ImageView
-            android:id="@+id/img_more_gotoProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:src="@drawable/ic_arrow_right"
-
-            app:layout_constraintBottom_toBottomOf="@id/txt_more_profileProfession"
-            app:layout_constraintEnd_toEndOf="@id/line_more_end"
-            app:layout_constraintTop_toTopOf="@id/txt_more_profileName" />
+            app:layout_constraintStart_toEndOf="@id/card_more_profile"
+            app:layout_constraintTop_toTopOf="@id/card_more_profile" />
 
         <TextView
-            android:id="@+id/txt_more_displayTitle"
+            android:id="@+id/tv_more_teamcount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginTop="40dp"
-            android:text="디스플레이"
-            android:textFontWeight="700"
-
+            android:layout_marginTop="4dp"
+            android:text="5"
+            android:textColor="#313040"
             android:textSize="17sp"
-
-            app:layout_constraintStart_toStartOf="@id/line_more_start"
-            app:layout_constraintTop_toBottomOf="@id/img_more_profileImage" />
+            app:layout_constraintBottom_toBottomOf="@id/card_more_profile"
+            app:layout_constraintEnd_toEndOf="@id/tv_more_teamtitle"
+            app:layout_constraintStart_toStartOf="@id/tv_more_teamtitle"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_teamtitle" />
 
         <TextView
-            android:id="@+id/txt_more_displayDarkMode"
+            android:id="@+id/tv_more_portfoliotitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginTop="22dp"
-            android:text="다크모드"
-            android:textFontWeight="600"
-
-            android:textSize="15sp"
-
-            app:layout_constraintStart_toStartOf="@id/line_more_start"
-            app:layout_constraintTop_toBottomOf="@id/txt_more_displayTitle" />
-
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:background="@drawable/se_switch_track"
-            android:checked="true"
-            android:thumb="@drawable/se_switch_thumb"
-
-            app:layout_constraintBottom_toBottomOf="@id/txt_more_displayDarkMode"
-            app:layout_constraintEnd_toEndOf="@id/line_more_end"
-            app:layout_constraintTop_toTopOf="@id/txt_more_displayDarkMode"
-            app:track="@drawable/se_switch_track" />
-
-        <Button
-            android:id="@+id/btn_more_logout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:layout_marginHorizontal="@dimen/app_padding_hr"
-            android:layout_marginBottom="@dimen/app_padding_bottom"
-            android:text="로그아웃"
-
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/suit_bold"
+            android:text="포트폴리오"
+            android:textColor="#B7B7B7"
+            android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/tv_more_teamtitle"
+            app:layout_constraintTop_toTopOf="@id/tv_more_teamtitle" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="13"
+            android:textColor="#313040"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/card_more_profile"
+            app:layout_constraintEnd_toEndOf="@id/tv_more_portfoliotitle"
+            app:layout_constraintStart_toStartOf="@id/tv_more_portfoliotitle"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_teamtitle" />
+
+        <TextView
+            android:id="@+id/tv_more_profession"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="@{singleton.userData.profession}"
+            android:textColor="#B7B7B7"
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="@id/card_more_profile"
+            app:layout_constraintTop_toBottomOf="@id/card_more_profile" />
+
+        <TextView
+            android:id="@+id/tv_more_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/suit_medium"
+            android:text="@{singleton.userData.nickname}"
+            android:textColor="#1D1D1D"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="@id/card_more_profile"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_profession" />
+
+        <TextView
+            android:id="@+id/tv_more_introduce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/suit_medium"
+            android:textColor="#313040"
+            android:textSize="13sp"
+            android:text="@{singleton.userData.introduce}"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_nickname"
+            app:layout_constraintStart_toStartOf="@id/card_more_profile" />
+
+        <View
+            android:id="@+id/view_more_line"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_introduce"
+            android:layout_marginTop="16dp"
+            android:background="#F4F4F4" />
+
+        <TextView
+            android:id="@+id/tv_more_nowteam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="참여한 팀"
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/view_more_line"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="24dp"
+            android:fontFamily="@font/suit_bold"
+            android:textColor="#1D1D1D" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_more_team"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:listitem="@layout/row_team_select_list_item"
+            app:layout_constraintTop_toBottomOf="@id/tv_more_nowteam"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
